# appointment-system

./: .prettierrc.json  CMakeLists.txt  README.md  appointments.db  conanfile.txt
include/: Appointment.h  DatabaseManager.hpp  Lecturer.h  People.h  Student.h
include/config/: Globals.hpp  ManageGlobals.hpp
include/core/: Appointment.hpp  Lecturer.hpp  People.hpp  Student.hpp
include/managers/: AppointmentManager.hpp  LecturerManager.hpp  StudentManager.hpp
resources/: appointments.db  config.env
scripts/: build.bat  file.c
src/: Appointment.cpp  Lecturer.cpp  People.cpp  Student.cpp  file.c  main.cpp
src/config/: Globals.cpp  ManageGlobals.cpp
src/core/: Appointment.cpp  Lecturer.cpp  People.cpp  Student.cpp
src/managers/: AppointmentManager.cpp  DatabaseManager.cpp  LecturerManager.cpp  StudentManager.cpp
test/: CMakeLists.txt
test/core/: AppointmentTest.cpp  LecturerTest.cpp  StudentTest.cpp
